# app/Http/Controllers/TriggerController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 
+use App\Models\Notes;
 use App\Models\Trigger;
 use App\Models\User;
 use Carbon\Carbon;
@@ -12,44 +13,97 @@ use function PHPUnit\Framework\isNull;
 
 class TriggerController extends Controller
 {
-    # Создание триггера +
-    public function trigger(Request $request) {
-        $validate = Validator::make($request->all(), [
-            'triggers' => 'required|json',
-        ],[
-            'triggers.required' => 'Данные отсутствуют',
-            'triggers.json' => 'Только JSON формат',
-        ])->errors();
-        # Валидация
-        if($validate->any()) {
-            return ['status' => ['error' => $validate->all()]];
-        }
+    /**
+     * * @OA\Post(
+     *     tags={"Триггеры"},
+     *     path="/api/v1/trigger/create",
+     *     description="Создание триггера",
+     *     @OA\Response(response="200", description="The data"),
+     *     @OA\Parameter(
+     *     name="api_token",
+     *     in="query",
+     *     description="Защитный API токен"),
+     *     @OA\Parameter(
+     *     name="event",
+     *     in="query",
+     *     description="Событие",
+     * ),
+     *     @OA\Parameter(
+     *     name="feels",
+     *     in="query",
+     *     description="Ощущения",
+     * ),
+     *     @OA\Parameter(
+     *     name="action",
+     *     in="query",
+     *     description="Действией",
+     * ),
+     *     @OA\Parameter(
+     *     name="thoughts",
+     *     in="query",
+     *     description="Мысли",
+     * )),
+     *
+     * @OA\Post(
+     *     tags={"Триггеры"},
+     *     path="/api/v1/trigger/thinking",
+     *     description="Установка позитивного мышления спустя 24ч",
+     *     @OA\Response(response="200", description="The data"),
+     *     @OA\Parameter(
+     *     name="api_token",
+     *     in="query",
+     *     description="Защитный API токен"),
+     *     @OA\Parameter(
+     *     name="thinking",
+     *     in="query",
+     *     description="Описание"
+     * )),
+     * @OA\Post(
+     *     tags={"Триггеры"},
+     *     path="/api/v1/trigger/delete",
+     *     description="Удаление триггера",
+     *     @OA\Response(response="200", description="The data"),
+     *     @OA\Parameter(
+     *     name="api_token",
+     *     in="query",
+     *     description="Защитный API токен"),
+     *     @OA\Parameter(
+     *     name="id",
+     *     in="query",
+     *     description="ID триггера"
+     * )),
+     */
 
+    # Создание триггера
+    public function trigger(Request $request) {
         $user = User::where('api_token', $request->api_token)->first();
+
         $triggersToday = $user->triggersToday();
 
         # Ограничение
         if($triggersToday >= Trigger::$dailyLimitTriggers) {
-            return ['status' => ["error" => "Сегодня больше нельзя создавать тригеры"]];
+            return ['status' => ["error" => "Сегодня больше нельзя добавлять триггеры"]];
         }
 
-        # Добавление новых записей
-        Trigger::create($user->id, $request->triggers, $triggersToday);
+        # Добавление триггера
+        Trigger::create($user->id, $request);
 
         return [
             'status' => [
-                'success' => 'Триггеры добавлены'
+                'success' => 'Триггер добавлен'
             ]
         ];
     }
 
-    # Создание позитивного мышления
+    # Создание позитивного мышления +
     public function thinking(Request $request) {
         $validate = Validator::make($request->all(), [
-            'thinking' => 'required|json',
+            'thinking' => 'required',
+            'id' => 'required|integer',
         ],[
             'thinking.required' => 'Данные отсутствуют',
-            'thinking.json' => 'Только JSON формат',
+            'id.required' => 'ID триггера отсутствуют',
+            'id.integer' => 'ID триггера может быть только целочисленным значением',
         ])->errors();
         # Валидация
         if($validate->any()) {
@@ -58,52 +112,15 @@ class TriggerController extends Controller
 
         $user = User::where('api_token', $request->api_token)->first();
 
-
-        $thinking = json_decode($request->thinking, true);
-
-        # Транзакция
-        DB::transaction(function () use ($thinking, $user, &$error) {
-            foreach ($thinking as $item) {
-                $data = [
-                    'updated_at' => Carbon::now(),
-                ];
-
-                # Добавление позитивного мышления
-                foreach ($item as $key => $value) {
-                    $trigger = $user->trigger($key, $user->id);
-                    # Проверка на принадлежность с токену
-                    if(!$trigger) {
-                        if(count($thinking) == 1) {
-                            $error = 'Триггер не найден';
-                            return;
-                        }
-                        continue;
-                    }
-                    # Проверка на NULL
-                    if(isset($trigger->thinking)) {
-                        if(count($thinking) == 1) {
-                            $error = 'Позитивное мышление уже было добавлено к этому триггеру';
-                            return;
-                        }
-                        continue;
-                    }
-                    # Проверка на 24 часа
-                    if(Carbon::parse($trigger->created_at) < Carbon::now()->addHours(-24)) {
-                        if(count($thinking) == 1) {
-                            $error = '24 часа ещё не прошли';
-                            return;
-                        }
-                        continue;
-                    }
-                    $data['thinking'] = $value;
-                    Trigger::where('id', $key)->update($data);
-                }
-            }
-        }, 6);
-
-        if($error) {
-            return ['status' => ['error' => $error]];
+        # Проверить trigger_id на принадлежность к токену
+        if(!$user->trigger($request->id, $user->id)) {
+            return ['status' => ['error' => 'Триггер не найден']];
         }
+
+        # Добавление данных
+        Trigger::where('user_id', $user->id)->where('id', $request->id)->update([
+            'thinking' => $request->thinking
+        ]);
 
         return ['status' => ['success' => 'Позитивное мышление добавлено к триггеру']];
     }
@@ -112,11 +129,17 @@ class TriggerController extends Controller
     public function delete(Request $request) {
         $user = User::where('api_token', $request->api_token)->first();
         # Проверить trigger_id на принадлежность к токену
-        if(!$user->trigger($request->trigger_id, $user->id)) {
+        if(!$user->trigger($request->id, $user->id)) {
             return ['status' => ['error' => 'Триггер не найден']];
         }
 
-        Trigger::destroy($request->trigger_id);
+        Trigger::where('user_id', $user->id)->where('id', $request->id)->delete();
         return ['status' => ['success' => 'Триггер удалён']];
+    }
+
+    # Получение списка триггеров +
+    public function getList(Request $request) {
+        $user = User::where('api_token', $request->api_token)->first();
+        return Trigger::where('user_id', $user->id)->paginate(5)->items();
     }
 }
