# routes/api_v1.php
@@ -1,5 +1,8 @@
 <?php
 
+use App\Http\Controllers\ModeratorController;
+use App\Http\Controllers\NotificationController;
+use App\Http\Controllers\StoryController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\UserController;
@@ -22,24 +25,63 @@ Route::post('/recovery/password', [UserController::class, 'recovery']);
 # Смена пароля
 Route::post('/reset/password', [UserController::class, 'reset']);
 
-Route::middleware('api_defense')->group(function () {
+# Список историй
+Route::post('/story/list', [StoryController::class, 'getList']);
+
+Route::middleware(['api_defense'])->group(function () {
     # Сохранение результатов теста депрессии
     Route::post('/calendar/depression', [CalendarController::class, 'depression']);
 
     # Сохранение результатов настроения
     Route::post('/calendar/mood', [CalendarController::class, 'mood']);
 
+    # Получение календаря
+    Route::post('/calendar/data', [CalendarController::class, 'data']);
+
     {   # Создание заметки
         Route::post('/notes/create', [NotesController::class, 'create']);
         # Удаление заметки
         Route::post('/notes/delete', [NotesController::class, 'destroy']);
+        # Получение заметок
+        Route::post('/notes/list', [NotesController::class, 'getList']);
     }
 
-    {   # Создание тригера
-        Route::get('/trigger/create', [TriggerController::class, 'trigger']);
+    {   # Создание триггера
+        Route::post('/trigger/create', [TriggerController::class, 'trigger']);
         # Мышление после 24 часов
-        Route::get('/trigger/thinking/create', [TriggerController::class, 'thinking']);
-        # Удаление тригера
+        Route::post('/trigger/thinking/create', [TriggerController::class, 'thinking']);
+        # Удаление триггера
         Route::post('/trigger/delete', [TriggerController::class, 'delete']);
+        # Список триггеров
+        Route::post('/trigger/list', [TriggerController::class, 'getList']);
     }
+
+    {   # Создание истории
+        Route::post('/story/create', [StoryController::class, 'create']);
+        Route::post('/story/edit', [StoryController::class, 'edit']);
+        Route::post('/story/destroy', [StoryController::class, 'destroy']);
+    }
+
+    {   # Список уведомлений
+        Route::post('/notifications/list', [NotificationController::class, 'getList']);
+    }
+});
+
+# Контроллеры модератора
+Route::middleware('api_moderator_defense')->controller(ModeratorController::class)->group(function () {
+    # Выдача модерки
+    Route::post('/moderator/extradition', 'extradition');
+    # Анулирование модерки
+    Route::post('/moderator/revoke', 'revokeRights');
+});
+
+Route::middleware(['api_defense', 'moderator_check'])->controller(ModeratorController::class)->group(function () {
+    # Получение материала для модерирования
+    Route::post('/moderator/story', 'story');
+    # Вынесение вердикта
+    Route::post('/moderator/verdict', 'verdict');
+    # Список архивных записей
+    Route::post('/moderator/archive', 'archive');
+    # Глобальное уведомление
+    Route::post('/notifications/general', [NotificationController::class, 'generalNotice']);
 });
